--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,9 @@
     "method-override": "^3.0.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.0.3"
   }
 }
