--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^2.7.0",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "cloudinary": "^2.0.0"
   }
 }
