--- a/backend/package.json
+++ b/backend/package.json
@@ -6,14 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
-
   },
   "author": "",
   "license": "ISC",
-  
   "dependencies": {
-  
-   
+    "axios": "^1.6.8",
+    "cloudinary": "^2.0.0",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
@@ -28,7 +26,6 @@
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
     "node-fetch": "^2.7.0",
-    "nodemon": "^3.0.3",
-    "cloudinary": "^2.0.0"
+    "nodemon": "^3.0.3"
   }
 }
